--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,7 @@ DB_PORT=5432
 DB_USERNAME=postgres
 DB_PASSWORD=your_password
 DB_NAME=nestjs_db
+
+# JWT Configuration
+JWT_SECRET=your-very-secure-secret-key-here
+JWT_EXPIRES_IN=1d
